--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
   <!--  Contact us  -->
       <div class="contact" data-aos="fade-up">
-        <div class="contact_head">Conatact Us :</div>
+        <div class="contact_head">Contact Us :</div>
         <div class="info" data-aos="fade-up">
           <p>
             Email : campulse@example.com <br>
