--- a/Notes  Web pages/notes.html
+++ b/Notes  Web pages/notes.html
@@ -18,7 +18,7 @@
     <a href="./DCN.html" target="_main">
       <button class="register-button">Data Communication and Networking</button>
     </a>
-    <a href=".AI.html" target="_main">
+    <a href="./AI.html" target="_main">
       <button class="register-button">Artificial Intelligence</button>
     </a>
     <a href="./DAA.html" target="_main">
